--- a/src/index.css
+++ b/src/index.css
@@ -35,3 +35,17 @@
   /* display: flex;
   align-items: center; */
 }
+/* app previews / list */
+.app-preview {
+  padding: 10px 16px;
+  margin: 20px 0;
+  border-bottom: 1px solid #fafafa;
+}
+.app-preview:hover {
+  box-shadow: 1px 3px 5px rgba(0,0,0,0.1);
+}
+.app-preview h2 {
+  font-size: 20px;
+  color: #f1356d;
+  margin-bottom: 8px;
+}
