--- a/src/index.css
+++ b/src/index.css
@@ -85,3 +85,21 @@
   border-radius: 8px;
   cursor: pointer;
 }
+
+/* app details page */
+.app-details h2 {
+  font-size: 20px;
+  color: #f1356d;
+  margin-bottom: 10px;
+}
+.app-details div {
+  margin: 20px 0;
+}
+.app-details button {
+  background: #f1356d;
+  color: #fff;
+  border: 0;
+  padding: 8px;
+  border-radius: 8px;
+  cursor: pointer;
+}
